--- a/src/components/presentation/SearchResults.css
+++ b/src/components/presentation/SearchResults.css
@@ -2,7 +2,7 @@
   border-bottom: 0.5px solid #D6D6D6;
   display: flex;
   margin: 0 10px;
-  padding: 15px 5px;
+  padding: 15px 15px;
   text-decoration: none;
 }
 
@@ -16,7 +16,9 @@
 }
 
 .entry .image img {
-
+  height: 65px;
+  width: 65px;
+  object-fit: cover;
 }
 
 .entry .name {
